--- a/public/style.css
+++ b/public/style.css
@@ -133,16 +133,19 @@ ul#postList img {
 
 .bottom-nav {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  background-color: #ffffff;
+  text-align: center;
+  width: 80vw;
+  bottom: 3vh;
+  border-radius: 15px;
+  height: 8vh;
+  background-color: #fff9f3;
   display: flex;
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.08);
   z-index: 99;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .nav-btn {
